@@ -1,15 +1,15 @@
 Package: hydroGOF
 Type: Package
 Title: Goodness-of-fit functions for comparison of simulated and observed hydrological time series
-Version: 0.2-2-22
-Date: 2011-07-21
+Version: 0.2-2-23
+Date: 2011-07-26
 Author: Mauricio Zambrano Bigiarini
 Maintainer: Mauricio Zambrano Bigiarini <mauricio.zambrano@ing.unitn.it>
 Description: S3 functions implementing both statistical and graphical goodness-of-fit measures between observed and simulated values, mainly oriented to be used during the calibration, validation, and application of hydrological models. Missing values in observed and/or simulated values can removed before the computations. Comments / questions / collaboration of any kind are very welcomed.
 License: GPL (>=2)
 Depends: R (>= 2.10.0) 
 Imports: hydroTSM (>= 0.2-2)
-Suggests: zoo (>= 1.7-1), xts (>= 0.8-1)
+Suggests: zoo (>= 1.7-0), xts (>= 0.8-1)
 HowToCite: > citation("hydroGOF")
 URL: http://www.rforge.net/hydroGOF/, http://cran.r-project.org/web/packages/hydroGOF/
 BugReports: https://www.rforge.net/bugzilla/describecomponents.cgi?product=hydroGOF
